# graphql-redis

./: .pre-commit-config.yaml  README.md  pyproject.toml
.reuse/: dep5
graphql_redis/: schema.py
rouge_redis/: schema.py
tests/: test_graphql_redis.py  test_rouge_redis.py
