[tool.poetry]
name = "rouge_redis"
version = "0.1.0"
description = ""
authors = ["Benjamin Lyng Jørgensen <benjamin@lyng.space>"]

[tool.poetry.dependencies]
python = "^3.9"
strawberry-graphql = {extras = ["fastapi"], version = "^0.105.0"}
redis = "^4.2.2"
fastapi = "^0.75.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
black = "^22.3.0"
types-redis = "^4.1.19"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
